--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/contacts.html"></include>   
+    <include src="./partials/example.html"></include>
+     
 
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
