--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <include src="./partials/customers.html"></include>
     <include src="./partials/contacts.html"></include>     
     <include src="./partials/page-footer.html"></include>
+    <include src="./partials/modal.html"></include>
 
    
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
